--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </p>
       <figure>
         <center>
-        <img src="./images/fig_1.png" style="width:80%"></img>
+        <img src="./images/Picture1.png" style="width:90%"></img>
         Figure 1: Showcase of our DGL-MOT dataset. Our dataset is divided by different driving 
         <br>
         scenarios in terms of highway, local, parking, and resident
@@ -133,7 +133,7 @@
       </div>
 
       <div class="five columns">
-        <a href="https://va.tech.purdue.edu/DGL-MOTS/residency.zip"><img style="width:100%; height: 200px;" src="./images/residency.jpg"></a>
+        <a href="https://va.tech.purdue.edu/DGL-MOTS/resident.zip"><img style="width:100%; height: 200px;" src="./images/resident.jpg"></a>
       </div>                   
     </div>
 
@@ -145,7 +145,7 @@
       </div>
       <div class="five columns">
         <center>
-          <a href="https://va.tech.purdue.edu/DGL-MOTS/residency.zip">Residency</a>
+          <a href="https://va.tech.purdue.edu/DGL-MOTS/resident.zip">Resident</a>
         </center>
       </div> 
     </div>  
