--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	 <div class="section">
   <h5>2. Data Download</h5>
   We are currently running the annotation corrections of our dataset. 
-  Some sample data are available <a href="https://va.tech.purdue.edu/DGL-MOTS/mail/"> HERE</a>. <br>
+  Some sample data are available <a href="https://va.tech.purdue.edu/DGL-MOTS/"> HERE</a>. <br>
   Annotation statistics is displayed in Table 1.
 		<figure>
       <center>
